--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Africa/Nairobi
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -102,7 +102,7 @@ avatar: https://styles.redditmedia.com/t5_8vf7zv/styles/profileIcon_khznqj1npy8e
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: https://styles.redditmedia.com/t5_8vf7zv/styles/profileIcon_khznqj1npy8e1.jpg?width=256&height=256&frame=1&auto=webp&crop=256:256,smart&s=4a3dfb741a7c204c70694e9a8744b7a871514172# string, local or CORS resources
+social_preview_image: 
 
 # boolean type, the global switch for TOC in posts.
 toc: true
