--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ timezone: Africa/Nairobi
 
 title: Ibrahim Ng`ang`a # the main title
 
+favicon: https://styles.redditmedia.com/t5_8vf7zv/styles/profileIcon_khznqj1npy8e1.jpg?width=256&height=256&frame=1&auto=webp&crop=256:256,smart&s=4a3dfb741a7c204c70694e9a8744b7a871514172
+
 tagline: Personal Blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
