--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,15 @@ analytics:
   fathom:
     id: # fill in your Fathom Site ID
 
+# Page Plugins
+plugins:
+   - jekyll-feed
+   title: Your Blog Title
+   description: Your blog description
+   url: https://ibrahimnganga.github.io
+
+
+
 # Page views settings
 pageviews:
   provider: # now only supports 'goatcounter'
